<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#616161">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.ard.arddevone.comicnet.Activity.Login">

        <LinearLayout
            android:paddingBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <ImageView
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:id="@+id/imageView_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:src="@drawable/login_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/app_name"
                    android:paddingBottom="18dp"
                    android:paddingTop="18dp"
                    android:src="@drawable/user" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/view_login" />

                <EditText
                    android:id="@+id/editText_email_login_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#00000000"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/textView_login"
                    android:textColorHint="@color/textView_login"
                    android:textSize="18sp"
                    android:paddingBottom="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/app_name"
                    android:paddingBottom="18dp"
                    android:paddingTop="8dp"
                    android:src="@drawable/password" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/view_login" />

                <EditText
                    android:id="@+id/editText_password_login_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#00000000"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/textView_login"
                    android:textColorHint="@color/textView_login"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <cn.refactor.library.SmoothCheckBox
                    android:id="@+id/checkbox_login_activity"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    app:color_checked="@color/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/remember_me"
                    android:textColor="@color/textView_login"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/button_login_activity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_login_register_backgrount"
                    android:text="@string/button_text_login"
                    android:textColor="@color/textView_login" />

                <Button
                    android:id="@+id/button_skip_login_activity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_login_register_backgrount"
                    android:text="@string/button_text_skip"
                    android:textColor="@color/textView_login" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/forgot_password_backgrount"
                android:padding="0dp">

                <Button
                    android:id="@+id/button_forgotPassword_login_activity"
                    android:layout_width="0dp"
                    android:layout_height="0dp"

                    android:text="@string/button_text_forgot_password"
                    android:textColor="#616161"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_login_register_backgrount"
                android:padding="5dp">

                <Button
                    android:id="@+id/button_register_login_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:text="@string/button_text_register"
                    android:textColor="@color/textView_login"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>